2015-05-25  Carl Hetherington  <cth@carlh.net>

	* Increase the number of images that DCP-o-matic will
	keep around in memory before resorting to pushing them
	to disk.

	* Display DCP container size beside the choice
	in the DCP tab.

	* Try to set up useful default colour conversions
	depending on the type and resolution of content (#565).

2015-05-23  Carl Hetherington  <cth@carlh.net>

	* Fix failure to import some video MXFs (#566).

2015-05-17  Carl Hetherington  <cth@carlh.net>

	* Update DCP name on changing DCP standard (#570).

2015-05-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.47 released.

2015-05-13  c.hetherington  <cth@carlh.net>

	* Various fixes to embedded image subtitle
	handling.

2015-05-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.46 released.

2015-05-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.45 released.

2015-05-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.44 released.

2015-05-10  Carl Hetherington  <cth@carlh.net>

	* Fix sometimes-missing channel labels on OS X audio analysis.

2015-05-09  Carl Hetherington  <cth@carlh.net>

	* Efficiency fix for cases where there is a lot of processing
	power.

	* Add UTF-8 content type to KDM emails to try to fix #549.

	* Disable OK until a download succeeds in the certificate
	downloader (#404).

2015-05-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.43 released.

2015-05-07  Carl Hetherington  <cth@carlh.net>

	* A few small but possibly sigificant correctness fixes
	for subtitles (thanks to dcp_inspect).

2015-05-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.42 released.

2015-05-04  Carl Hetherington  <cth@carlh.net>

	* Move restore-default-prefs option (#537).

	* Don't try to update config dialog when its window has been
	destroyed.  Fixes various crashes on Windows (from master).

	* Add a simple content properties dialog (#554).

2015-05-01  carl  <cth@carlh.net>

	* Don't load image files whose names start with ._ as they